# list-serialization-cpp

./: .gitignore  CMakeLists.txt  README.md  solution.cpp
include/: ArgParser.hpp  FileParser.hpp  List.hpp
src/: ArgParser.cpp  FileParser.cpp  List.cpp  main.cpp
tests/: test_list.cpp
